--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
 transformers
+langchain
+langchain_chroma
+langchain_community
+langchain_core
+langchain_text_splitters
+langchain_openai
+whisper
 librosa==0.10.2.post1
 torch==2.6.0
 pydub==0.25.1
