--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-transformers
+transformers~=4.49.0
 langchain
 langchain_chroma
 langchain_community
@@ -10,7 +10,7 @@ librosa==0.10.2.post1
 torch==2.6.0
 pydub==0.25.1
 gTTS==2.5.4
-scipy==1.15.2
+scipy~=1.13.1
 git+https://github.com/openai/whisper.git
 sounddevice==0.5.1
 PyAudio==0.2.11
@@ -91,7 +91,7 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.2.1
 notebook_shim==0.2.4
-numpy==2.2.0
+numpy~=1.26.4
 ollama==0.4.7
 orjson==3.10.15
 overrides==7.7.0
@@ -158,3 +158,5 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 zstandard==0.23.0
+
+playsound~=1.3.0
