--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ langchain_text_splitters
 langchain_openai
 whisper
 librosa==0.10.2.post1
-torch==2.6.0
+# torch==2.6.0
 pydub==0.25.1
 gTTS==2.5.4
 scipy~=1.13.1
@@ -127,7 +127,7 @@ rfc3986-validator==0.1.1
 rpds-py==0.22.3
 safetensors==0.5.3
 scikit-learn==1.6.0
-scipy==1.14.1
+# scipy==1.14.1
 seaborn==0.13.2
 Send2Trash==1.8.3
 setuptools==75.6.0
@@ -143,7 +143,7 @@ terminado==0.18.1
 threadpoolctl==3.5.0
 tinycss2==1.4.0
 tokenizers==0.21.1
-torch==2.5.1+cpu
+# torch==2.5.1+cpu
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
